# rpc_robot_colony

./: .gitignore  README.md
designs/scad/: HC-SR04_sensor_Plugin_modified.scad
designs/stl/sensors/: HC-SR04_sensor_plugin.stl  HC-SR04_sensor_plugin_modified.stl  sensor_plugin.stl
doc/diagrams/: coordination_library_classes.dia  robot_library_classes.dia
doc/servomotors/: Calibration_parameters.xlsx
hardware/HC05_bluetooth/: bluepack.PCB
src/android/: teleoperation.apk
src/android/teleoperation/: .project  AndroidManifest.xml
src/android/teleoperation/res/layout/: activity_main.xml  free_labyrinth.xml  guided_labyrinth.xml
src/android/teleoperation/res/menu/: main.xml
src/android/teleoperation/res/values/: strings.xml
src/android/teleoperation/src/com/example/robotcolony/: FreeLabyrinthScreen.java  GuidedLabyrinthScreen.java  MainActivity.java
src/arduino/aula2015/: aula2015.ino  libreriaUc3m.ino
src/arduino/libraries/bluecomm/examples/: bluetooth.sh
src/arduino/libraries/bluecomm/examples/receive/: receive.ino
src/arduino/libraries/bluecomm/examples/robotcontroller/: robotcontroller.ino
src/arduino/libraries/coordination/: Bluetooth.cpp  Bluetooth.h  Robot.cpp  Servomotor.cpp  UltrasonicSensor.cpp
src/arduino/libraries/coordination/examples (test)/Bluetooth_slave_test/: Bluetooth_slave_test.ino
src/arduino/libraries/coordination/examples (test)/Movemment_test/: Movemment_test.ino
src/arduino/libraries/robot_library/: CMakeLists.txt  motor_interface.h  servomotor_driver.cpp  servomotor_driver.h
src/arduino/libraries/robot_library/project/: CMakeLists.txt  distance_sensor_interface.h  hcsr04_driver.cpp  hcsr04_driver.h  motor_driver.cpp  motor_driver.h  motor_interface.h  robot_library.cpp  servomotor_driver.cpp  servomotor_driver.h  servomotor_wrapper.cpp  servomotor_wrapper.h
src/arduino/libraries/robot_library/project/test/: CMakeLists.txt  test_hcsr04_sensor.cpp  test_motors.cpp  test_servomotors.cpp
src/arduino/programs/USreader/: USreader.ino
src/arduino/programs/encTest/: encTest.ino
src/arduino/programs/labyrinth_master/: labyrinth_master.ino
src/arduino/programs/protobot/: protobot.ino  sensor.ino
src/arduino/programs/slave/: slave.ino
src/arduino/programs/templates/: README.txt
src/arduino/programs/templates/libraries/Test/: Test.cpp
src/arduino/programs/templates/libraries/Test/examples/test/: test.ino
src/libraries/HCSR04_ultrasonic/: Ultrasonic.cpp  Ultrasonic.h
src/libraries/HCSR04_ultrasonic/examples/Demo1/: Demo1.ino
src/libraries/HCSR04_ultrasonic/examples/Demo2/: Demo2.ino
src/libraries/bluecomm/examples/readInt/: readInt.ino
src/libraries/bluecomm/examples/send/: send  send.cpp
src/libraries/coordination/: Robot.h  Servomotor.h  UltrasonicSensor.h
src/libraries/coordination/examples (test)/Bluetooth_master_test/: Bluetooth_master_test.ino
src/libraries/coordination/examples (test)/Get_obstacle_distance_test/: Get_obstacle_distance_test.ino
src/programs/calibration_s3003/: calibration_s3003.ino
src/programs/protobot/: move.ino
src/programs/templates/libraries/Test/: Test.h  keywords.txt  readme.txt
src/programs/templates/program/: program.ino
src/qt/teleoperation_gui/: Resources.qrc  RobotColony.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  robotcontrolwindow.cpp  robotcontrolwindow.h  robotcontrolwindow.ui
src/ros/publisher_to_test/: CMakeLists.txt  package.xml
src/ros/publisher_to_test/src/: publisher_to_servo.cpp
src/ros/serial_publisher/: CMakeLists.txt
src/serial_publisher/: package.xml
src/serial_publisher/src/: serial_publisher_node.cpp
src/third_parties/arduino-cmake/cmake/: ArduinoToolchain.cmake
src/third_parties/arduino-cmake/example/: CMakeLists.txt
